fix(doc): prevent technical properties table to extend too much

--- a/packages/storybook/src/components/technicalSpecification/classModule.module.css
+++ b/packages/storybook/src/components/technicalSpecification/classModule.module.css
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+.class-module__properties__body code {
+  white-space: break-spaces;
+}
+
 .class-module__events,
 .class-module__methods {
   display: flex;
